# DLW

./: .gitignore  README.md  pyproject.toml
docs/: DIAGNOSTICS_REPORT.md  pattern_justification.md
examples/: .gitkeep
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/components/: client-shell.tsx  sidebar.tsx  top-bar.tsx  ui.tsx
frontend/src/lib/: auth-context.tsx  sample-data.ts  utils.ts
infra/azure/: Dockerfile  README.md  deploy.ps1  host.json  local.settings.json.template  main.bicep  requirements-azure.txt
scripts/: .gitkeep  test_endpoints.py
src/learning_navigator/: __init__.py  cli.py
src/learning_navigator/agents/: __init__.py  base.py  behavior.py  debate_advocates.py  debate_arbitrator.py  decay.py  diagnoser.py  drift_detector.py  evaluator.py  generative_replay.py  motivation.py  planner.py  rag_agent.py  reflection.py  skill_state.py  time_optimizer.py
src/learning_navigator/api/: __init__.py  agent_diagnostics.py  auth.py  auth_db.py  auth_routes.py  azure_functions.py  server.py  weekly_summary.py
src/learning_navigator/contracts/: __init__.py  events.py  learner_state.py  messages.py
src/learning_navigator/engine/: __init__.py  adaptive_router.py  confidence_calibrator.py  debate.py  event_bus.py  gps_engine.py  hitl.py  maker_checker.py
src/learning_navigator/evaluation/: __init__.py  harness.py  metrics.py  scenarios.py
src/learning_navigator/infra/: __init__.py  config.py  logging.py
src/learning_navigator/llm/: __init__.py  azure_client.py
tests/: test_agents.py  test_azure_deployment.py  test_config_and_agent.py  test_continual_learning.py  test_contracts.py  test_debate.py  test_differentiators.py  test_evaluation.py  test_event_bus.py  test_gps_engine.py  test_learner_state.py  test_llm_client.py  test_maker_checker.py  test_new_features.py  test_new_features_tier1.py  test_rag.py  test_specialized_agents.py  test_storage.py  test_storage_factory.py
(+17 files in other folders)
