[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-navigator"
version = "0.1.0"
description = "Multi-Agent Learning GPS — adaptive, explainable learning navigation system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Learning Navigator Team" }]
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.25,<1",
    "typer>=0.9,<1",
    "structlog>=23.2,<25",
    "rich>=13.0,<14",
    "bcrypt>=4.0,<5",
    "PyJWT>=2.8,<3",
    "aiosqlite>=0.19,<1",
    "openai>=1.12,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.2,<1",
    "mypy>=1.8,<2",
    "httpx>=0.26,<1",         # for FastAPI test client
]
azure = [
    "azure-storage-blob>=12.19,<13",
    "azure-search-documents>=11.4,<12",
    "azure-functions>=1.17,<2",
    "azure-identity>=1.15,<2",
]

[project.scripts]
learning-nav = "learning_navigator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["learning_navigator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
